src/styles.css
* {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    user-select: none;
}

body {
    background: #f4f7fb;
    color: #773399;
}

.dark {
    background: #001432;
    color: #88CC66;
}

#nightButton {
    width: 50px;
    height: 50px;
    background: none;
    border: none;
    cursor: pointer;
}

#nightButton img {
    width: 100%;
    height: auto;
}

#main {
    animation: fadeIn 0.6s;
}

@keyframes fadeIn {
    from {
        opacity: 0;
        translate: 0 40px;
    }
    to {
        opacity: 1;
        translate: 0 0px;
    }
}

.particle {
    width: 8px;
    height: 8px;
    background: #773399;
    border-radius: 50%;    
    pointer-events: none;
    will-change: transform, opacity;
    outline: solid red 0.5px;
}

h1 {
    justify-self: center;
}

h6 {
    justify-self: center;
}

li {
    font-weight: 500;
    list-style: none;
}
a {
    margin-left: 50px;
    margin-right: 50px;
    border-radius: 10px;
    text-decoration: none;
    position: sticky;
    color: #773399;
}
#current {
    color: red;
}
ul {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    background-color: #d7e6fa;
    align-items: center;
}

body.dark ul {
    background-color: #002763;
}

body.dark ul a {
    color: #88CC66;
}

body.dark ul #current {
    color: rgb(0, 225, 255);
}

body.dark ul img {
    filter: invert(0.75);
}

#timelineLine {
    margin-top: 150px;
    margin-left: 40px;
    margin-right: 40px;
    height: 0px;
    border-radius: 100px;
    border: 3px solid #773399;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.timelineDot {
    height: 60px;
    width: 60px;
    border-radius: 30px;
    background-color: #4ce027;
    transition: scale 0.6s;
}

.timelineImage {
    width: 100%;
    height: 100%;
    border-radius: 50%; 
}

.timelineDot:hover {
    scale: 2;
}

.timelineButton {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    padding: 0;
    Border: none;
    cursor: pointer;
}

.hidden {
    visibility: none;
}

#extras #box1{
    transition: scale 0.8s ease-in-out;
}

#extras #box2{
    transition: scale 1s ease-in-out;
}

#extras #box3{
    transition: scale 0.6s ease-in-out;
}

@keyframes firstBox {

}
@keyframes secondBox {

}
@keyframes thirdBox {

}

